--- a/smartsoko/soko/templates/base.html
+++ b/smartsoko/soko/templates/base.html
@@ -259,3 +259,11 @@
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     </body>
 </html>
+console.log("Navigation loaded.");
+console.log("Masthead loaded.");
+console.log("About section loaded.");
+console.log("Services section loaded.");
+console.log("Portfolio section loaded.");
+console.log("Call to action section loaded.");
+console.log("Contact section loaded.");
+console.log("Footer loaded.");
