--- a/smartsoko/soko/templates/contact.html
+++ b/smartsoko/soko/templates/contact.html
@@ -15,31 +15,27 @@
         </div>
         <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
             <div class="col-lg-6">
-                <form id="contactForm" method="POST" novalidate>
+                <form id="contactForm" method="POST">
                     {% csrf_token %}
                     <!-- Name input -->
                     <div class="form-floating mb-3">
                         <input class="form-control" id="name" name="name" type="text" placeholder="Enter your name..." required />
                         <label for="name">Full Name</label>
-                        <div class="invalid-feedback">A name is required.</div>
                     </div>
                     <!-- Email input -->
                     <div class="form-floating mb-3">
                         <input class="form-control" id="email" name="email" type="email" placeholder="name@example.com" required />
                         <label for="email">Email Address</label>
-                        <div class="invalid-feedback">A valid email is required.</div>
                     </div>
                     <!-- Phone number input -->
                     <div class="form-floating mb-3">
                         <input class="form-control" id="phone" name="phone" type="tel" placeholder="(123) 456-7890" required />
                         <label for="phone">Phone Number</label>
-                        <div class="invalid-feedback">A phone number is required.</div>
                     </div>
                     <!-- Message input -->
                     <div class="form-floating mb-3">
                         <textarea class="form-control" id="message" name="message" placeholder="Enter your message here..." style="height: 10rem" required></textarea>
                         <label for="message">Message</label>
-                        <div class="invalid-feedback">A message is required.</div>
                     </div>
                     <!-- Submit Button -->
                     <div class="d-grid">
