--- a/smartsoko/soko/templates/product_detail.html
+++ b/smartsoko/soko/templates/product_detail.html
@@ -1,208 +1,169 @@
 {% extends 'base.html' %}
 
-{% block content %}
-<!doctype html>
-<html lang="en">
-    <head>        
-        <title>Tooplate's Little Fashion - Product Detail</title>
+{% block preloader %}
+<section class="preloader">
+    <div class="spinner">
+        <span class="sk-inner-circle"></span>
+    </div>
+</section>
+{% endblock %}
 
-        <!-- CSS FILES -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-        <link href="{% static 'css/bootstrap-icons.css' %}" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/slick.css' %}"/>
-        <link href="{% static 'css/tooplate-little-fashion.css' %}" rel="stylesheet">
-    </head>
+{% block navbar %}
+<nav class="navbar navbar-expand-lg">
+    <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <body>
-        {% block preloader %}
-        <section class="preloader">
-            <div class="spinner">
-                <span class="sk-inner-circle"></span>
+        <a class="navbar-brand" href="{% url 'index' %}">
+            <strong><span>Little</span> Fashion</strong>
+        </a>
+
+        <div class="d-lg-none">
+            <a href="{% url 'sign_in' %}" class="bi-person custom-icon me-3"></a>
+            <a href="{% url 'product_detail' %}" class="bi-bag custom-icon"></a>
+        </div>
+
+        <div class="d-none d-lg-block">
+            <a href="{% url 'sign_in' %}" class="bi-person custom-icon me-3"></a>
+            <a href="{% url 'product_detail' %}" class="bi-bag custom-icon"></a>
+        </div>
+    </div>
+</nav>
+{% endblock %}
+
+{% block header %}
+<header class="site-header section-padding d-flex justify-content-center align-items-center">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-10 col-12">
+                <h1>
+                    <span class="d-block text-primary">We provide you</span>
+                    <span class="d-block text-dark">Fashionable Stuffs</span>
+                </h1>
             </div>
-        </section>
-        {% endblock %}
+        </div>
+    </div>
+</header>
+{% endblock %}
 
-        <main>
-            {% block navbar %}
-            <nav class="navbar navbar-expand-lg">
-                <div class="container">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-
-                    <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
-                    </a>
-
-                    <div class="d-lg-none">
-                        <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
-                        <a href="product-detail.html" class="bi-bag custom-icon"></a>
-                    </div>
-
-                   
-                       
-
-                        <div class="d-none d-lg-block">
-                            <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
-                            <a href="product-detail.html" class="bi-bag custom-icon"></a>
-                        </div>
-                    </div>
+{% block content %}
+<section class="product-detail section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-12">
+                <div class="product-thumb">
+                    <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
                 </div>
-            </nav>
-            {% endblock %}
+            </div>
 
-            {% block header %}
-            <header class="site-header section-padding d-flex justify-content-center align-items-center">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-10 col-12">
-                            <h1>
-                                <span class="d-block text-primary">We provide you</span>
-                                <span class="d-block text-dark">Fashionable Stuffs</span>
-                            </h1>
-                        </div>
+            <div class="col-lg-6 col-12">
+                <div class="product-info d-flex">
+                    <div>
+                        <h2 class="product-title mb-0">Tree pot</h2>
+                        <p class="product-p">Original package design from house</p>
                     </div>
+                    <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
                 </div>
-            </header>
-            {% endblock %}
 
-            {% block content_section %}
-            <section class="product-detail section-padding">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-6 col-12">
-                            <div class="product-thumb">
-                                <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
-                            </div>
-                        </div>
-
-                        <div class="col-lg-6 col-12">
-                            <div class="product-info d-flex">
-                                <div>
-                                    <h2 class="product-title mb-0">Tree pot</h2>
-                                    <p class="product-p">Original package design from house</p>
-                                </div>
-
-                                <small class="product-price text-muted ms-auto mt-auto mb-5">$25</small>
-                            </div>
-
-                            <div class="product-description">
-                                <strong class="d-block mt-4 mb-2">Description</strong>
-                                <p class="lead mb-5">Over three years in business, We’ve had the chance to work on a variety of projects, with companies</p>
-                            </div>
-
-                            <div class="product-cart-thumb row">
-                                <div class="col-lg-6 col-12">
-                                    <select class="form-select cart-form-select" id="inputGroupSelect01">
-                                        <option selected>Quantity</option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                        <option value="5">5</option>
-                                    </select>
-                                </div>
-
-                                <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                                    <button type="submit" class="btn custom-btn cart-btn" data-bs-toggle="modal" data-bs-target="#cart-modal">Add to Cart</button>
-                                </div>
-
-                                <p>
-                                    <a href="#" class="product-additional-link">Details</a>
-                                    <a href="#" class="product-additional-link">Delivery and Payment</a>
-                                </p>
-                            </div>
-
-                        </div>
-
-                    </div>
+                <div class="product-description">
+                    <strong class="d-block mt-4 mb-2">Description</strong>
+                    <p class="lead mb-5">Over three years in business, We’ve had the chance to work on a variety of projects, with companies</p>
                 </div>
-            </section>
-            {% endblock %}
 
-            {% block footer %}
-            <footer class="site-footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-3 col-10 me-auto mb-4">
-                            <h4 class="text-white mb-3"><a href="index.html">Little</a> Fashion</h4>
-                            <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2022 <strong>Little Fashion</strong></p>
-                            <br>
-                            <p class="copyright-text">Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
-                        </div>
-
-                        <div class="col-lg-5 col-8">
-                            <h5 class="text-white mb-3">Sitemap</h5>
-                            <ul class="footer-menu d-flex flex-wrap">
-                                <li class="footer-menu-item"><a href="about.html" class="footer-menu-link">Story</a></li>
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
-                                <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
-                            </ul>
-                        </div>
-
-                        <div class="col-lg-3 col-4">
-                            <h5 class="text-white mb-3">Social</h5>
-                            <ul class="social-icon">
-                                <li><a href="#" class="social-icon-link bi-youtube"></a></li>
-                                <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
-                                <li><a href="#" class="social-icon-link bi-instagram"></a></li>
-                                <li><a href="#" class="social-icon-link bi-skype"></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </footer>
-            {% endblock %}
-        </main>
-
-        <!-- CART MODAL -->
-        <div class="modal fade" id="cart-modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered modal-lg">
-                <div class="modal-content border-0">
-                    <div class="modal-header flex-column">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="product-cart-thumb row">
+                    <div class="col-lg-6 col-12">
+                        <select class="form-select cart-form-select" id="inputGroupSelect01">
+                            <option selected>Quantity</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                        </select>
                     </div>
 
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-lg-6 col-12 mt-4 mt-lg-0">
-                                <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
-                            </div>
-
-                            <div class="col-lg-6 col-12 mt-3 mt-lg-0">
-                                <h3 class="modal-title" id="exampleModalLabel">Tree pot</h3>
-                                <p class="product-price text-muted mt-3">$25</p>
-                                <p class="product-p">Quantity: <span class="ms-1">4</span></p>
-                                <p class="product-p">Colour: <span class="ms-1">Black</span></p>
-                                <p class="product-p pb-3">Size: <span class="ms-1">S/S</span></p>
-                                <div class="border-top mt-4 pt-3">
-                                    <p class="product-p"><strong>Total: <span class="ms-1">$100</span></strong></p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-lg-6 col-12 mt-4 mt-lg-0">
+                        <button type="submit" class="btn custom-btn cart-btn" data-bs-toggle="modal" data-bs-target="#cart-modal">Add to Cart</button>
                     </div>
 
-                    <div class="modal-footer">
-                        <div class="row w-50">
-                            <button type="button" class="btn custom-btn cart-btn ms-lg-4">Checkout</button>
-                        </div>
-                    </div>
+                    <p>
+                        <a href="#" class="product-additional-link">Details</a>
+                        <a href="#" class="product-additional-link">Delivery and Payment</a>
+                    </p>
                 </div>
             </div>
         </div>
+    </div>
+</section>
 
-        <!-- JAVASCRIPT FILES -->
-        <script src="{% static 'js/jquery.min.js' %}"></script>
-        <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-        <script src="{% static 'js/Headroom.js' %}"></script>
-        <script src="{% static 'js/jQuery.headroom.js' %}"></script>
-        <script src="{% static 'js/slick.min.js' %}"></script>
-        <script src="{% static 'js/custom.js' %}"></script>
-    </body>
-</html>
+<!-- CART MODAL -->
+<div class="modal fade" id="cart-modal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content border-0">
+            <div class="modal-header flex-column">
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+            <div class="modal-body">
+                <div class="row">
+                    <div class="col-lg-6 col-12 mt-4 mt-lg-0">
+                        <img src="{% static 'images/product/evan-mcdougall-qnh1odlqOmk-unsplash.jpeg' %}" class="img-fluid product-image" alt="">
+                    </div>
+                    <div class="col-lg-6 col-12 mt-3 mt-lg-0">
+                        <h3 class="modal-title">Tree pot</h3>
+                        <p class="product-price text-muted mt-3">$25</p>
+                        <p class="product-p">Quantity: <span class="ms-1">4</span></p>
+                        <p class="product-p">Colour: <span class="ms-1">Black</span></p>
+                        <p class="product-p pb-3">Size: <span class="ms-1">S/S</span></p>
+                        <div class="border-top mt-4 pt-3">
+                            <p class="product-p"><strong>Total: <span class="ms-1">$100</span></strong></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="row w-50">
+                    <button type="button" class="btn custom-btn cart-btn ms-lg-4">Checkout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block footer %}
+<footer class="site-footer">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-10 me-auto mb-4">
+                <h4 class="text-white mb-3"><a href="{% url 'index' %}">Little</a> Fashion</h4>
+                <p class="copyright-text">
+                    &copy; 2022 <strong>Little Fashion</strong><br>
+                    Designed by <a href="https://www.tooplate.com/" target="_blank">Tooplate</a>
+                </p>
+            </div>
+
+            <div class="col-lg-5 col-8">
+                <h5 class="text-white mb-3">Sitemap</h5>
+                <ul class="footer-menu d-flex flex-wrap">
+                    <li class="footer-menu-item"><a href="{% url 'about' %}" class="footer-menu-link">Story</a></li>
+                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Products</a></li>
+                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Privacy policy</a></li>
+                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">FAQs</a></li>
+                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Contact</a></li>
+                </ul>
+            </div>
+
+            <div class="col-lg-3 col-4">
+                <h5 class="text-white mb-3">Social</h5>
+                <ul class="social-icon">
+                    <li><a href="#" class="social-icon-link bi-youtube"></a></li>
+                    <li><a href="#" class="social-icon-link bi-whatsapp"></a></li>
+                    <li><a href="#" class="social-icon-link bi-instagram"></a></li>
+                    <li><a href="#" class="social-icon-link bi-skype"></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 {% endblock %}
