modified home and base

--- a/smartsoko/soko/templates/home.html
+++ b/smartsoko/soko/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static %}  {# Required for using the 'static' tag #}
+{% load static %}
 
 {% block content %}
 <header class="site-header section-padding d-flex justify-content-center align-items-center">
