--- a/smartsoko/soko/templates/base.html
+++ b/smartsoko/soko/templates/base.html
@@ -1,35 +1,31 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <meta name="description" content="">
-        <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <title>SmartSoko!</title>
+    <title>SmartSoko!</title>
 
-        <!-- CSS FILES -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- CSS Files -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-icons.css' %}">
+    <link rel="stylesheet" href="{% static 'css/slick.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tooplate-little-fashion.css' %}">
+</head>
 
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-<link rel="stylesheet" href="{% static 'css/bootstrap-icons.css' %}">
-<link rel="stylesheet" href="{% static 'css/slick.css' %}">
-<link rel="stylesheet" href="{% static 'css/tooplate-little-fashion.css' %}">       
-
-    </head>
     
     <body>
 
-        <section class="preloader">
-            <div class="spinner">
-                <span class="sk-inner-circle"></span>
-            </div>
-        </section>
+       
     
         <main>
 
@@ -40,7 +36,7 @@
                     </button>
 
                     <a class="navbar-brand" href="index.html">
-                        <strong><span>Little</span> Fashion</strong>
+                        <strong><span>SmartSoko</span> Fashion</strong>
                     </a>
 
                     <div class="d-lg-none">
@@ -64,7 +60,7 @@
                             </li>
 
                             <li class="nav-item">
-                                <a class="nav-link" href="faq.html">FAQs</a>
+                                <a class="nav-link" href="FAQS.html">FAQs</a>
                             </li>
 
                             <li class="nav-item">
@@ -398,7 +394,7 @@
                         <h4 class="text-white mb-3"><a href="home.html">smartsoko</a> Fashion</h4>
                         <p class="copyright-text text-muted mt-lg-5 mb-4 mb-lg-0">Copyright © 2025 <strong>SmartSoko</strong></p>
                         <br>
-                        
+                        <p class="copyright-text">Designed by <a href="https frankie" target="_blank">Tooplate</a></p>
                     </div>
 
                     <div class="col-lg-5 col-8">
