--- a/smartsoko/soko/templates/base.html
+++ b/smartsoko/soko/templates/base.html
@@ -69,9 +69,9 @@
                         </ul>
 
                         <div class="d-none d-lg-block">
-                            <a href="sign-in.html" class="bi-person custom-icon me-3"></a>
+                            <a href="login.html" class="bi-person custom-icon me-3"></a>
 
-                            <a href="product-detail.html" class="bi-bag custom-icon"></a>
+                            <a href="product_detail.html" class="bi-bag custom-icon"></a>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                                 <div class="col-lg-6 col-10">
                                     <h1 class="slick-title">Cool Fashion</h1>
 
-                                    <p class="lead text-white mt-lg-3 mb-lg-5">Little fashion template comes with total 8 HTML pages provided by Tooplate website.</p>
+                                    <p class="lead text-white mt-lg-3 mb-lg-5">Smart shopping, smarter selling – only at SmartSoko.</p>
 
                                     <a href="about.html" class="btn custom-btn">Learn more about us</a>
                                 </div>
