added ies for contact

--- a/smartsoko/soko/templates/base.html
+++ b/smartsoko/soko/templates/base.html
@@ -42,10 +42,10 @@
                         <a class="nav-link" href="{% url 'about' %}">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'products' %}">Products</a>
+                        <a class="nav-link" href="{% url 'product' %}">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'faqs' %}">FAQs</a>
+                        <a class="nav-link" href="{% url 'FAQS' %}">FAQs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'contact' %}">Contact</a>
