--- a/smartsoko/soko/templates/login.html
+++ b/smartsoko/soko/templates/login.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/slide_navbar_style.css' %}">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
