--- a/smartsoko/soko/templates/login.html
+++ b/smartsoko/soko/templates/login.html
@@ -8,7 +8,8 @@
     <div class="login">
         <form method="POST">
             {% csrf_token %}
-            <label for="chk" aria-hidden="true">Login</label>            
+            <label for="chk" aria-hidden="true">Login</label> 
+            <input type="email" name = "Email" placeholder="Email" required>       
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
