--- a/smartsoko/soko/templates/about.html
+++ b/smartsoko/soko/templates/about.html
@@ -1,34 +1,38 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Tooplate's Little Fashion - About Page{% endblock %}
+{% block title %}Little Fashion - About{% endblock %}
 
 {% block content %}
 <main>
 
+    <!-- Hero Header Section -->
     <header class="site-header section-padding-img site-header-image">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-12 header-info">
                     <h1>
-                        <span class="d-block text-primary">Company</span>
-                        <span class="d-block text-dark">Fashion</span>
+                        <span class="d-block text-primary">About</span>
+                        <span class="d-block text-dark">Our Company</span>
                     </h1>
                 </div>
             </div>
         </div>
-        <img src="{% static 'images/header/businesspeople-meeting-office-working.jpg' %}" class="header-image img-fluid" alt="">
+        <img src="{% static 'images/header/businesspeople-meeting-office-working.jpg' %}" class="header-image img-fluid" alt="About Header">
     </header>
 
+    <!-- Team Section -->
     <section class="team section-padding">
         <div class="container">
             <div class="row">
-                <div class="col-12"><h2 class="mb-5">Meet our <span>team</span></h2></div>
+                <div class="col-12">
+                    <h2 class="mb-5">Meet our <span>Team</span></h2>
+                </div>
 
-                <!-- Repeat team members -->
+                <!-- Team Member Example -->
                 <div class="col-lg-4 mb-4 col-12">
                     <div class="team-thumb d-flex align-items-center">
-                        <img src="{% static 'images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg' %}" class="img-fluid custom-circle-image team-image me-4" alt="">
+                        <img src="{% static 'images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg' %}" class="img-fluid custom-circle-image team-image me-4" alt="Don">
                         <div class="team-info">
                             <h5 class="mb-0">Don</h5>
                             <strong class="text-muted">Product, VP</strong>
@@ -37,27 +41,28 @@
                     </div>
                 </div>
 
-                <!-- Add similar blocks for Kelly and Marie -->
+                <!-- Add more team members here -->
 
             </div>
         </div>
     </section>
 
-    <section class="testimonial section-padding">
+    <!-- Testimonial Section -->
+    <section class="testimonial section-padding bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-lg-9 mx-auto col-11">
-                    <h2 class="text-center">Customer love, <br> <span>Little</span> Fashion</h2>
-                    <div class="slick-testimonial">
-                        <!-- Repeat testimonials -->
+                <div class="col-lg-9 mx-auto col-11 text-center">
+                    <h2>Customer Love for <span>Little Fashion</span></h2>
+
+                    <div class="slick-testimonial mt-4">
                         <div class="slick-testimonial-caption">
-                            <p class="lead">Over three years in business, We’ve had the chance to work on a variety of projects...</p>
-                            <div class="slick-testimonial-client d-flex align-items-center mt-4">
-                                <img src="{% static 'images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg' %}" class="img-fluid custom-circle-image me-3" alt="">
+                            <p class="lead">Over three years in business, we’ve worked on a variety of projects delivering great fashion experiences.</p>
+                            <div class="slick-testimonial-client d-flex align-items-center mt-4 justify-content-center">
+                                <img src="{% static 'images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg' %}" class="img-fluid custom-circle-image me-3" alt="Customer">
                                 <span>George, <strong class="text-muted">Digital Art Fashion</strong></span>
                             </div>
                         </div>
-                        <!-- Repeat testimonial blocks -->
+                        <!-- More testimonial blocks if needed -->
                     </div>
                 </div>
             </div>
@@ -65,7 +70,6 @@
     </section>
 
 </main>
-
 {% endblock %}
 
 {% block scripts %}
