--- a/smartsoko/soko/templates/about.html
+++ b/smartsoko/soko/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Little Fashion - About{% endblock %}
+{% block title %}SmartSoko- About{% endblock %}
 
 {% block content %}
 <main>
@@ -52,14 +52,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-9 mx-auto col-11 text-center">
-                    <h2>Customer Love for <span>Little Fashion</span></h2>
+                    <h2>Customer Love for <span>SamrtSoko</span></h2>
 
                     <div class="slick-testimonial mt-4">
                         <div class="slick-testimonial-caption">
                             <p class="lead">Over three years in business, we’ve worked on a variety of projects delivering great fashion experiences.</p>
                             <div class="slick-testimonial-client d-flex align-items-center mt-4 justify-content-center">
                                 <img src="{% static 'images/people/senior-man-wearing-white-face-mask-covid-19-campaign-with-design-space.jpeg' %}" class="img-fluid custom-circle-image me-3" alt="Customer">
-                                <span>George, <strong class="text-muted">Digital Art Fashion</strong></span>
+                                <span>Machage, <strong class="text-muted">Digital Art Fashion</strong></span>
                             </div>
                         </div>
                         <!-- More testimonial blocks if needed -->
