--- a/smartsoko/soko/templates/contact.html
+++ b/smartsoko/soko/templates/contact.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <!-- Contact Section -->
+<section class="preloader">
+    <div class="spinner">
+        <span class="sk-inner-circle"></span>
+    </div>
+</section>
 <section class="page-section" id="contact">
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
