--- a/smartsoko/soko/templates/products.html
+++ b/smartsoko/soko/templates/products.html
@@ -7,6 +7,11 @@
 {% endblock %}
 
 {% block content %}
+<section class="preloader">
+    <div class="spinner">
+        <span class="sk-inner-circle"></span>
+    </div>
+</section>
 <main>
     <header class="site-header section-padding d-flex justify-content-center align-items-center">
         <div class="container">
