--- a/smartsoko/soko/templates/product_detail.html
+++ b/smartsoko/soko/templates/product_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Tooplate's Little Fashion - Product Detail{% endblock %}
+{% block title %}SmartSoko - Product Detail{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="css/slick.css"/>
