--- a/sokosmart/smartsoko/soko/templates/login.html
+++ b/sokosmart/smartsoko/soko/templates/login.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/slide_navbar_style.css' %}">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
-
+<form method="POST" action="{% url 'login' %}">
 <div class="main">  	
     <div class="login">
         <form method="POST">
