--- a/sokosmart/smartsoko/soko/templates/login.html
+++ b/sokosmart/smartsoko/soko/templates/login.html
@@ -1,18 +1,44 @@
-
+{% extends 'base.html'%}
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/slide_navbar_style.css' %}">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
-<form method="POST" action="{% url 'login' %}">
+
 <div class="main">  	
     <div class="login">
-        <form method="POST">
+        <form method="POST" action="{% url 'login' %}">
             {% csrf_token %}
             <label for="chk" aria-hidden="true">Login</label> 
-            <input type="email" name = "Email" placeholder="Email" required>       
+            <input type="email" name="email" placeholder="Email" required>       
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
+            
+            {% if error %}
+                <p style="color: red;">{{ error }}</p>
+            {% endif %}
+            
+            <p class="register-link">
+                Don't have an account? <a href="{% url 'register' %}">Register</a>
+            </p>
         </form>
     </div>
 </div>
+
+<style>
+    .register-link {
+        margin-top: 15px;
+        text-align: center;
+        font-size: 14px;
+    }
+    
+    .register-link a {
+        color: #4CAF50;
+        text-decoration: none;
+        font-weight: bold;
+    }
+    
+    .register-link a:hover {
+        text-decoration: underline;
+    }
+</style>
 {% endblock %}
