--- a/sokosmart/smartsoko/soko/templates/login.html
+++ b/sokosmart/smartsoko/soko/templates/login.html
@@ -1,6 +1,8 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
+<!-- External CSS and Fonts -->
 <link rel="stylesheet" href="{% static 'css/slide_navbar_style.css' %}">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 
@@ -8,9 +10,17 @@
     <div class="login">
         <form method="POST" action="{% url 'login' %}">
             {% csrf_token %}
+
+            <!-- Include next parameter if present -->
+            {% if request.GET.next %}
+                <input type="hidden" name="next" value="{{ request.GET.next }}">
+            {% endif %}
+
             <label for="chk" aria-hidden="true">Login</label> 
+
             <input type="email" name="email" placeholder="Email" required>       
             <input type="password" name="password" placeholder="Password" required>
+
             <button type="submit">Login</button>
             
             {% if error %}
@@ -24,6 +34,7 @@
     </div>
 </div>
 
+<!-- Inline styling for register link -->
 <style>
     .register-link {
         margin-top: 15px;
@@ -41,4 +52,5 @@
         text-decoration: underline;
     }
 </style>
+
 {% endblock %}
