--- a/sokosmart/smartsoko/soko/templates/register.html
+++ b/sokosmart/smartsoko/soko/templates/register.html
@@ -1,33 +1,52 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+
+<!-- External CSS and Fonts -->
 <link rel="stylesheet" type="text/css" href="{% static 'css/slide_navbar_style.css' %}">
 <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 
 <div class="main">  	
-    <input type="checkbox" id="chk" aria-hidden="true">
-
-    <!-- Sign Up Form -->
+    <!-- Registration Form -->
     <div class="signup">
         <form method="POST" action="{% url 'register' %}">
             {% csrf_token %}
-            <label for="chk" aria-hidden="true">Sign up</label>
-            <input type="text" name="username" placeholder="User name" required="">
-            <input type="email" name="email" placeholder="Email" required="">
-            <input type="password" name="password1" placeholder="Password" required="">            
-            <button type="submit">Sign up</button>
-        </form>
-    </div>
+            <label aria-hidden="true">Sign up</label>
 
-    <!-- Login Form (Optional placeholder) -->
-    <div class="login">
-        <form method="POST" action="{% url 'login' %}">
-            {% csrf_token %}
-            <label for="chk" aria-hidden="true">Login</label>
-            <input type="email" name="email" placeholder="Email" required="">
-            <input type="password" name="password" placeholder="Password" required="">
-            <button type="submit">Login</button>
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="email" name="email" placeholder="Email" required>
+            <input type="password" name="password1" placeholder="Password" required>
+
+            <button type="submit">Sign up</button>
+
+            {% if error %}
+                <p style="color: red;">{{ error }}</p>
+            {% endif %}
         </form>
+
+        <p class="login-link">
+            Already have an account? <a href="{% url 'login' %}">Login here</a>
+        </p>
     </div>
 </div>
+
+<!-- Optional styling for login link -->
+<style>
+    .login-link {
+        margin-top: 15px;
+        text-align: center;
+        font-size: 14px;
+    }
+
+    .login-link a {
+        color: #4CAF50;
+        text-decoration: none;
+        font-weight: bold;
+    }
+
+    .login-link a:hover {
+        text-decoration: underline;
+    }
+</style>
+
 {% endblock %}
